tests/negative/regression/r5.orng
// r5.orng:5:20: error: expected a value of type `Bool`
// const a: Bool = (0, []1)
//                   ^
// 
const a: Bool = (0, []1)